# palett

./: Cargo.toml  README.md
src/: lib.rs
src/cards/: amber.rs  blue.rs  blue_grey.rs  brown.rs  cyan.rs  deep_orange.rs  deep_purple.rs  green.rs  grey.rs  indigo.rs  light_blue.rs  light_green.rs  lime.rs  mod.rs  orange.rs  pink.rs  purple.rs  red.rs  teal.rs  yellow.rs
src/convert/: _hex_hsl.rs  _hex_int.rs  _hex_rgb.rs  _hsl_hex.rs  _hsl_rgb.rs  _rgb_hex.rs  _rgb_hsl.rs  _rgb_int.rs  mod.rs
src/dye/: dye_factory.rs  mod.rs
src/dye/color_to_ansi/: mod.rs
src/enums/: color_spaces.rs  effects.rs  mod.rs
src/fluo/: _fluo_vector.rs  entries.rs  matrix.rs  mod.rs  vector.rs
src/presets/: aqua.rs  atlas.rs  aurora.rs  azure.rs  fresh.rs  insta.rs  jungle.rs  lava.rs  metro.rs  mod.rs  moss.rs  ocean.rs  planet.rs  pome.rs  subtle.rs  viola.rs
src/projector/: mod.rs  projector.rs
src/projector/utils/: _bound_to_leap.rs  _leverage.rs  _preset_to_flat.rs  _preset_to_leap.rs  _scale.rs  mod.rs
src/types/: bound.rs  card.rs  color_bound.rs  dye.rs  leap.rs  mod.rs  preset.rs
src/types/extensions/: mod.rs  tuple_extensions.rs
src/utils/ansi/: color_modes.rs  console_colors.rs  control_codes.rs  effects.rs  mod.rs
tests/: integration_test.rs
tests/alpha/: crate_test_veho_dependency.rs  generic_largest_test.rs  generic_struct_test.rs  mod.rs  pointer_ref_and_deref_test.rs  scope_borrowing_test.rs  scope_lifetime_test.rs  scope_operator_test.rs  types_tuple_test.rs
tests/alpha/struct_callable/: mod.rs  (+2 more)
tests/common/: cards_test.rs  mod.rs
