[package]
name = "palett"
version = "0.0.2"
authors = ["hazen <hoyeungw@outlook.com>"]
description = "ansi color space tool"
readme = "README.md"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num = "0.3.1"
veho = ">=0.0.5"
