[package]
name = "palett"
description = "ansi color space tool"
version = "0.0.6"
authors = ["Hoyeung Wong <hoyeungw@outlook.com>"]
readme = "README.md"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = ">=0.3.1"
veho = ">=0.0.15"
aryth = ">=0.0.7"
